# qt-mandelbrot

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mandelbrot.cpp  mandelbrot.h  tile.h
